added in functionality to search for sdls'

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -112,7 +112,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGSVWQdTeDeG",
-        "outputId": "21ef36df-22b0-4fe6-cca3-9b3ba5723ce5",
+        "outputId": "f4695a7c-058a-4c90-a9c8-5d2e8f1dc228",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
@@ -121,7 +121,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 95,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +883,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 182
         }
       ]
     },
@@ -905,7 +905,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KEd8mYWAouxX",
-        "outputId": "56d9b009-042d-4cbb-f082-53ac622366d7",
+        "outputId": "587a0fa2-2f17-428e-c2cd-cd48a3ed5faf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -914,7 +914,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 97,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1166,7 +1166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 184
         }
       ]
     },
@@ -1188,7 +1188,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0KgDY68fr-k8",
-        "outputId": "ca66f727-88bb-4dbc-86f0-095a3dc0e1ab",
+        "outputId": "f11e9827-6596-4870-b4b0-7b6241c6f6d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -1197,7 +1197,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 99,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1449,7 +1449,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 186
         }
       ]
     },
@@ -1485,7 +1485,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nbJgQfbsjels",
-        "outputId": "43bedc6f-3d37-4b78-d326-7b7f1864ae78",
+        "outputId": "d9df4dff-8eb8-4305-a638-864312e0e9f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 804
@@ -1494,7 +1494,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 101,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2091,7 +2091,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 188
         }
       ]
     },
@@ -2126,7 +2126,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "SR-9rohMkUjR",
-        "outputId": "6695be26-af99-492f-be60-8001971e46ba",
+        "outputId": "0a1eb6af-4c90-4f90-bb8e-b54e41c9ef41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2135,7 +2135,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 104,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2391,7 +2391,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 191
         }
       ]
     },
@@ -2654,7 +2654,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "M--8pXkwvaiU",
-        "outputId": "8748808c-a945-4fe6-e1d4-899f1858920b",
+        "outputId": "a10fc53b-ac12-4a77-ebb8-6ce010b564a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2663,7 +2663,7 @@
       "source": [
         "len(sdlList)"
       ],
-      "execution_count": 108,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2675,7 +2675,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 195
         }
       ]
     },
@@ -2734,7 +2734,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "16iFV7LEzMYU",
-        "outputId": "1dccc93f-d948-423a-8f9f-c97466989680",
+        "outputId": "7d967d88-7c46-4378-f980-cfc78b35d3b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
@@ -2743,7 +2743,7 @@
       "source": [
         "(sdlObjectList[6].statements)"
       ],
-      "execution_count": 112,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2769,7 +2769,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 199
         }
       ]
     },
@@ -2778,7 +2778,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "kSIrzqV5zHMD",
-        "outputId": "7f076baf-6a93-4584-e15e-a1e60841d421",
+        "outputId": "54e58416-cff1-41a3-c8d0-afa8bc99e5eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -2791,7 +2791,7 @@
         "  for j in (keysTemp):\n",
         "    sdlObjectList[i].getDescriptors(sdlObjectList[i].statements[j], j)"
       ],
-      "execution_count": 113,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "stream",
@@ -2808,7 +2808,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "N_Jmbn68zHML",
-        "outputId": "c81345f2-cec5-4715-8228-a6acc1a9e7b7",
+        "outputId": "ccfc5935-331a-4ca6-9874-6fd4f7a7df98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 751
@@ -2828,7 +2828,7 @@
         "        print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[example].actors[actorsIndex][j].description,sdlObjectList[example].actors[actorsIndex][j].action))\n",
         "    print('Scene: ', sdlObjectList[example].scene)"
       ],
-      "execution_count": 114,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
@@ -2885,7 +2885,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "p7JZmnlC4RBN",
-        "outputId": "0d76b5a9-5323-4aec-c53a-300c71b78c6a",
+        "outputId": "6df2dee8-76d0-4b43-f239-9d74705cd1a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2906,7 +2906,7 @@
         "\n",
         "print(\"There are %i actors and %i actions. Completeness: %f\"%(actor_count,action_count,action_count/actor_count))"
       ],
-      "execution_count": 115,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "stream",
@@ -2932,17 +2932,17 @@
       "metadata": {
         "id": "rEbIGm--MDKa",
         "colab_type": "code",
+        "outputId": "9bbf1663-ab39-4371-94a7-b564b67e1953",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "94ae529a-0428-4dda-a975-e789f9b3de67"
+          "height": 51
+        }
       },
       "source": [
         "# https://pypi.org/project/anytree/\n",
         "pip install anytree"
       ],
-      "execution_count": 116,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "stream",
@@ -3061,17 +3061,17 @@
       "metadata": {
         "id": "bvS3i78kz2RE",
         "colab_type": "code",
+        "outputId": "c7f9929d-dd8a-4c4f-a53d-f3102bce9ed4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "7defe654-4a2d-4336-a78f-dea9d9fb6f87"
+          "height": 1000
+        }
       },
       "source": [
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 118,
+      "execution_count": 205,
       "outputs": [
         {
           "output_type": "stream",
@@ -3398,17 +3398,17 @@
       "metadata": {
         "id": "AekE_Ghj3oxH",
         "colab_type": "code",
+        "outputId": "14759a50-d583-4518-d76a-ae9085fe6deb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "a04d3caa-0d22-45a0-df98-e6d813efeb76"
+          "height": 1000
+        }
       },
       "source": [
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 121,
+      "execution_count": 208,
       "outputs": [
         {
           "output_type": "stream",
@@ -3813,17 +3813,17 @@
       "metadata": {
         "id": "Aw5si2XL4KSc",
         "colab_type": "code",
+        "outputId": "0709c8a3-3824-4e19-bec4-559f3ffe279a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "a16e2678-1878-4072-ae00-d389e2575197"
+          "height": 1000
+        }
       },
       "source": [
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 123,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "stream",
@@ -4585,17 +4585,17 @@
       "metadata": {
         "id": "06tsQzIt4zlK",
         "colab_type": "code",
+        "outputId": "147e46dd-5328-4760-a9bf-7ea56ae5173a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "651dc2ca-0647-46cf-8143-8a1be4503041"
+        }
       },
       "source": [
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 127,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "stream",
@@ -5302,7 +5302,11 @@
       "metadata": {
         "id": "FQgcV7jo6wSF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "577d93e8-1c75-487e-bb15-ddc57854abdd"
       },
       "source": [
         "#Actors: sdlObjectList[2].actors[actorsIndex][i].description where actorsIndex is a \n",
@@ -5314,6 +5318,7 @@
         "for example in examples:\n",
         "    for a in range(1):\n",
         "      actorsIndex = str(a+1)\n",
+        "      print(sdlObjectList[example].actors[actorsIndex])\n",
         "      for j in range(len(sdlObjectList[example].actors[actorsIndex])):\n",
         "        actor = sdlObjectList[example].actors[actorsIndex][j].description\n",
         "        actorAction = sdlObjectList[example].actors[actorsIndex][j].action\n",
@@ -5322,67 +5327,152 @@
         "      sceneElement = scene[0]\n",
         "    "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 216,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[<__main__.Actor object at 0x7f82d125f9b0>]\n",
+            "[<__main__.Actor object at 0x7f82d125fd30>, <__main__.Actor object at 0x7f82d125fe10>]\n",
+            "[<__main__.Actor object at 0x7f82d125ff60>, <__main__.Actor object at 0x7f82d125ffd0>]\n",
+            "[<__main__.Actor object at 0x7f82d1264400>]\n",
+            "[<__main__.Actor object at 0x7f82d12647f0>]\n",
+            "[<__main__.Actor object at 0x7f82d1264c88>, <__main__.Actor object at 0x7f82d1264d30>]\n",
+            "[<__main__.Actor object at 0x7f82d1265160>, <__main__.Actor object at 0x7f82d12651d0>]\n",
+            "[<__main__.Actor object at 0x7f82d1265438>, <__main__.Actor object at 0x7f82d12654e0>]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ISKh-bZ76pgF",
+        "id": "13n2zY8ofh-7",
         "colab_type": "text"
       },
       "source": [
-        "# Classification in SDL Space Using List Comprehension (INCOMPLETE)"
+        "# SDL Object Search"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "87dNNhTp50BB",
+        "id": "lKUmgOxAfnl_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def contains(list, filter):\n",
+        "    for x in list:\n",
+        "        if filter(x):\n",
+        "            return True\n",
+        "    return False\n",
+        "\n",
+        "def searchSDL(sdlObjectList):\n",
+        "\n",
+        "  print(\"Actor: \")\n",
+        "  actorInput = %sx read -p ''\n",
+        "  print(\"Action: \")\n",
+        "  actionInput = %sx read -p ''\n",
+        "  print(\"Scene: \")\n",
+        "  sceneInput = %sx read -p ''\n",
+        "\n",
+        "  sdlObjects = []\n",
+        "  examples = [351, 5730]\n",
+        "\n",
+        "  if(actorInput[0]!='' and actionInput[0]=='' and sceneInput[0]==''):\n",
+        "    for example in examples:\n",
+        "      actorList = sdlObjectList[example].actors['1']\n",
+        "      if contains(actorList, lambda x: x.description == actorInput[0]):\n",
+        "        sdlObjects.append(example)\n",
+        "      else:\n",
+        "        pass\n",
+        "\n",
+        "  elif(actorInput[0]!='' and actionInput[0]!='' and sceneInput[0]==''):\n",
+        "    for example in examples:\n",
+        "      actorList = sdlObjectList[example].actors['1']\n",
+        "      if (contains(actorList, lambda x: x.description == actorInput[0])) and (contains(actorList, lambda x: x.action == actionInput[0])):\n",
+        "        sdlObjects.append(example)\n",
+        "      else:\n",
+        "        pass\n",
+        "\n",
+        "  elif(actorInput[0]!='' and actionInput[0]!='' and sceneInput[0]!=''):\n",
+        "    for example in examples:\n",
+        "      actorList = sdlObjectList[example].actors['1']\n",
+        "      if (contains(actorList, lambda x: x.description == actorInput[0]) and (contains(actorList, lambda x: x.action == actionInput[0])) and (contains(sdlObjectList[example], lambda x: x.scene == sceneInput[0]))):\n",
+        "        sdlObjects.append(example)\n",
+        "      else:\n",
+        "        pass\n",
+        "  \n",
+        "  elif(actorInput[0]=='' and actionInput[0]!='' and sceneInput[0]==''):\n",
+        "    for example in examples:\n",
+        "      actorList = sdlObjectList[example].actors['1']\n",
+        "      if ((contains(actorList, lambda x: x.action == actionInput[0]))):\n",
+        "        sdlObjects.append(example)\n",
+        "      else:\n",
+        "        pass\n",
+        "  \n",
+        "  elif(actorInput[0]=='' and actionInput[0]=='' and sceneInput[0]!=''):\n",
+        "    for example in examples:\n",
+        "      actorList = sdlObjectList[example].actors['1']\n",
+        "      if ((contains(sdlObjectList[example], lambda x: x.scene == sceneInput[0]))):\n",
+        "        sdlObjects.append(example)\n",
+        "      else:\n",
+        "        pass\n",
+        "\n",
+        "  elif(actorInput[0]=='' and actionInput[0]=='' and sceneInput[0]==''):\n",
+        "    print('Input at least one of the following: ')\n",
+        "    print(\"Actor: \")\n",
+        "    actorInput = %sx read -p ''\n",
+        "    print(\"Action: \")\n",
+        "    actionInput = %sx read -p ''\n",
+        "    print(\"Scene: \")\n",
+        "    sceneInput = %sx read -p ''\n",
+        "  \n",
+        "  print(sdlObjects)\n",
+        "  \n",
+        "\n",
+        "  \n",
+        "\n",
+        "  \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9LNmVpS1wQt1",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 85
         },
-        "outputId": "585a34fb-f50d-4283-e611-de49bc4907eb"
+        "outputId": "7facbc6f-30e4-46a9-8a1d-599121bcfb93"
       },
       "source": [
-        "\n",
-        "egoActors = []\n",
-        "examples = [1,2,3,4,5,6,7,8]\n",
-        "for example in examples:\n",
-        "    for a in range(1):\n",
-        "      actorsIndex = str(a+1)\n",
-        "      for j in range(len(sdlObjectList[example].actors[actorsIndex])):\n",
-        "        actor = sdlObjectList[example].actors[actorsIndex][j].description\n",
-        "        print('actorsindex: ', example, actor)\n",
-        "        if (actor == 'ego'):\n",
-        "          egoActors.append(example)\n",
-        "        actorAction = sdlObjectList[example].actors[actorsIndex][j].action\n",
-        "    scene = sdlObjectList[example].scene['1']\n",
-        "    if (len(scene)!=0):\n",
-        "      sceneElement = scene[0]\n",
-        "print(egoActors)"
+        "searchSDL(sdlObjectList)"
       ],
-      "execution_count": 130,
+      "execution_count": 224,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "actorsindex:  1 ego\n",
-            "actorsindex:  2 ego\n",
-            "actorsindex:  2 traffic\n",
-            "actorsindex:  3 ego\n",
-            "actorsindex:  3 traffic\n",
-            "actorsindex:  4 ego\n",
-            "actorsindex:  5 ego\n",
-            "actorsindex:  6 ego\n",
-            "actorsindex:  6 light vehicle\n",
-            "actorsindex:  7 ego\n",
-            "actorsindex:  7 traffic\n",
-            "actorsindex:  8 ego\n",
-            "actorsindex:  8 traffic\n",
-            "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+            "Actor: \n",
+            "Action: \n",
+            "Scene: \n",
+            "[351]\n"
           ],
           "name": "stdout"
         }
