added in more categories for tensor generation

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "SDL_Data_Mining.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -112,7 +111,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGSVWQdTeDeG",
-        "outputId": "fce0d656-671e-4553-b57a-49a0467cd1c8",
+        "outputId": "b51d7a3d-f197-4916-821c-b529b3106bb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
@@ -121,7 +120,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 58,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +882,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 5
         }
       ]
     },
@@ -905,7 +904,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KEd8mYWAouxX",
-        "outputId": "961c7785-6d57-43fd-9324-3001fc214680",
+        "outputId": "84261f3e-ec0e-4055-bd22-ae2eacca5c05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -914,7 +913,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 60,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1166,7 +1165,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 7
         }
       ]
     },
@@ -1188,7 +1187,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0KgDY68fr-k8",
-        "outputId": "e8418df8-c1bb-4aa5-f089-8c5966004b4e",
+        "outputId": "245ae8be-ba73-447e-9d15-135a1e6b7641",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -1197,7 +1196,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 62,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1449,7 +1448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 9
         }
       ]
     },
@@ -1485,7 +1484,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nbJgQfbsjels",
-        "outputId": "72211142-50bc-441b-e5b3-eae2b8088e62",
+        "outputId": "9632e0d2-bc66-4b0f-fa38-d2526ab13b5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 804
@@ -1494,7 +1493,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 64,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2091,7 +2090,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 11
         }
       ]
     },
@@ -2126,7 +2125,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "SR-9rohMkUjR",
-        "outputId": "3bbb7393-a770-4da1-8a72-15a9866cb87d",
+        "outputId": "ac4bf4b3-8850-44ac-941e-373562fe0d54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2135,7 +2134,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 67,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2391,7 +2390,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 14
         }
       ]
     },
@@ -2654,7 +2653,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "M--8pXkwvaiU",
-        "outputId": "c36a1248-2619-4204-b801-329d94e0938c",
+        "outputId": "c9eee751-8466-4d89-9352-ff77cc92d0dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2663,7 +2662,7 @@
       "source": [
         "len(sdlList)"
       ],
-      "execution_count": 71,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2675,7 +2674,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 18
         }
       ]
     },
@@ -2734,7 +2733,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "16iFV7LEzMYU",
-        "outputId": "97ba02eb-bd0d-49cf-a2d7-8f9fa73e96c0",
+        "outputId": "26db3ffc-28fd-4e30-9a7b-a46e8941793e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
@@ -2743,7 +2742,7 @@
       "source": [
         "(sdlObjectList[6].statements)"
       ],
-      "execution_count": 75,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2769,7 +2768,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 22
         }
       ]
     },
@@ -2778,7 +2777,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "kSIrzqV5zHMD",
-        "outputId": "e87c9197-5605-4b7c-84ce-0ac548dd12fb",
+        "outputId": "a3a1e0ca-7802-48fd-cfda-bff5ebaedeb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -2791,13 +2790,13 @@
         "  for j in (keysTemp):\n",
         "    sdlObjectList[i].getDescriptors(sdlObjectList[i].statements[j], j)"
       ],
-      "execution_count": 76,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ],
           "name": "stdout"
         }
@@ -2808,7 +2807,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "N_Jmbn68zHML",
-        "outputId": "be74f2ec-9962-40cf-b323-222e5ebe2716",
+        "outputId": "ce227520-93dd-472b-de1d-e3514b7f1b49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 751
@@ -2828,7 +2827,7 @@
         "        print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[example].actors[actorsIndex][j].description,sdlObjectList[example].actors[actorsIndex][j].action))\n",
         "    print('Scene: ', sdlObjectList[example].scene)"
       ],
-      "execution_count": 144,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2885,7 +2884,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "p7JZmnlC4RBN",
-        "outputId": "95cbcdcc-0c2a-4fb7-d22e-5c432ac24a61",
+        "outputId": "d2076820-da3c-4b18-cc11-a5a08de6bcc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2906,7 +2905,7 @@
         "\n",
         "print(\"There are %i actors and %i actions. Completeness: %f\"%(actor_count,action_count,action_count/actor_count))"
       ],
-      "execution_count": 78,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2932,23 +2931,27 @@
       "metadata": {
         "id": "rEbIGm--MDKa",
         "colab_type": "code",
-        "outputId": "9c69baab-a163-4ae6-b956-e7d82409e9fc",
+        "outputId": "dab9a6a7-485f-497e-ece0-df357ca469ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 139
         }
       },
       "source": [
         "# https://pypi.org/project/anytree/\n",
         "pip install anytree"
       ],
-      "execution_count": 79,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: anytree in /usr/local/lib/python3.6/dist-packages (2.8.0)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.12.0)\n"
+            "Collecting anytree\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a8/65/be23d8c3ecd68d40541d49812cd94ed0f3ee37eb88669ca15df0e43daed1/anytree-2.8.0-py2.py3-none-any.whl (41kB)\n",
+            "\r\u001b[K     |███████▉                        | 10kB 18.0MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20kB 1.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30kB 2.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.12.0)\n",
+            "Installing collected packages: anytree\n",
+            "Successfully installed anytree-2.8.0\n"
           ],
           "name": "stdout"
         }
@@ -3061,7 +3064,7 @@
       "metadata": {
         "id": "bvS3i78kz2RE",
         "colab_type": "code",
-        "outputId": "99f88fd7-f2c4-4847-fbb1-439ce2cde80f",
+        "outputId": "441dc1a9-97f2-49d7-e359-f9b2f99312f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3071,7 +3074,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 81,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -3398,7 +3401,7 @@
       "metadata": {
         "id": "AekE_Ghj3oxH",
         "colab_type": "code",
-        "outputId": "390ff170-6b5c-4c65-b369-7535310a6950",
+        "outputId": "bcfca2ca-8998-440e-e1db-a5f499a2a7d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3408,7 +3411,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 84,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -3813,7 +3816,7 @@
       "metadata": {
         "id": "Aw5si2XL4KSc",
         "colab_type": "code",
-        "outputId": "9e244dc9-9e2c-4b2e-9c4a-7e7f03fa5f28",
+        "outputId": "cc35e0ac-d52a-4554-e26f-5dbbcefaff42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3823,7 +3826,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 86,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -4585,7 +4588,7 @@
       "metadata": {
         "id": "06tsQzIt4zlK",
         "colab_type": "code",
-        "outputId": "7ca2e94e-5a60-4347-f7f3-27f7854ce34a",
+        "outputId": "693e432d-8ea4-4363-b481-7aebd0bead24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -4595,7 +4598,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 90,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -5302,7 +5305,7 @@
       "metadata": {
         "id": "FQgcV7jo6wSF",
         "colab_type": "code",
-        "outputId": "64635270-493b-4728-d464-f1984ca3df93",
+        "outputId": "774689c3-f2c0-48d3-9047-907b461c576c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -5327,19 +5330,19 @@
         "      sceneElement = scene[0]\n",
         "    "
       ],
-      "execution_count": 92,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[<__main__.Actor object at 0x7fd4448d6da0>]\n",
-            "[<__main__.Actor object at 0x7fd4448d6d68>, <__main__.Actor object at 0x7fd4448d6978>]\n",
-            "[<__main__.Actor object at 0x7fd4448d61d0>, <__main__.Actor object at 0x7fd4448d6e10>]\n",
-            "[<__main__.Actor object at 0x7fd4448d6898>]\n",
-            "[<__main__.Actor object at 0x7fd4448cc8d0>]\n",
-            "[<__main__.Actor object at 0x7fd4448cc3c8>, <__main__.Actor object at 0x7fd4448cc2b0>]\n",
-            "[<__main__.Actor object at 0x7fd4448bcf28>, <__main__.Actor object at 0x7fd4448bcef0>]\n",
-            "[<__main__.Actor object at 0x7fd4448bcc50>, <__main__.Actor object at 0x7fd4448bcba8>]\n"
+            "[<__main__.Actor object at 0x7fecf60bf6d8>]\n",
+            "[<__main__.Actor object at 0x7fecf60bfa20>, <__main__.Actor object at 0x7fecf60bfe10>]\n",
+            "[<__main__.Actor object at 0x7fecf60bfdd8>, <__main__.Actor object at 0x7fecf60bfd30>]\n",
+            "[<__main__.Actor object at 0x7fecf60ca240>]\n",
+            "[<__main__.Actor object at 0x7fecf60ca630>]\n",
+            "[<__main__.Actor object at 0x7fecf60caac8>, <__main__.Actor object at 0x7fecf60cab70>]\n",
+            "[<__main__.Actor object at 0x7fecf60caf60>, <__main__.Actor object at 0x7fecf60cafd0>]\n",
+            "[<__main__.Actor object at 0x7fecf60ce278>, <__main__.Actor object at 0x7fecf60ce320>]\n"
           ],
           "name": "stdout"
         }
@@ -5464,7 +5467,7 @@
       "metadata": {
         "id": "yqkbowE6AE8_",
         "colab_type": "code",
-        "outputId": "c8e00158-6787-4f0b-80c5-5ecb06d13da4",
+        "outputId": "80c5677d-eea1-48f2-85e5-0667289c85b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -5475,7 +5478,7 @@
         "import numpy as np\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 125,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -5503,9 +5506,13 @@
         "# last element of each dimension represents an NaN value\n",
         "actor_encoding = {'light vehicle': 0, 'heavy vehicle': 1, 'cyclist': 2, 'pedestrian': 3, 'traffic': 4, 'ego': 5, 'NaN': 6}\n",
         "\n",
-        "scene_encoding = {'intersection': 0, 'crosswalk': 1, 'bridge': 2, 'green light': 3, 'stop sign': 4, 'yield sign': 5, 'sign': 6, 'u-turn': 7, 'traffic light': 8, 'traffic signal': 9, 'turn lane': 10, 'NaN': 11}\n",
+        "scene_encoding = {'intersection': 0, 'crosswalk': 1, 'bridge': 2, 'green light': 3, 'stop sign': 4, 'yield sign': 5, 'sign': 6, \n",
+        "                  'u-turn': 7, 'traffic light': 8, 'traffic signal': 9, 'turn lane': 10, 'crosswalks': 11, 'green traffic light': 12, \n",
+        "                  'light': 13, 'lights': 14, 'red light': 15, 'red traffic light': 16, 'signs': 17, 'traffic lights': 18, \n",
+        "                  'yellow light': 19, 'NaN': 20}\n",
         "\n",
-        "action_encoding = {'turn': 0, 'merge': 1, 'accelerate': 2, 'brake': 3, 'stop': 4, 'forward': 5, 'walk': 6, 'park': 7, 'drive': 8, 'reverse': 8, 'NaN': 9}\n",
+        "action_encoding = {'turn': 0, 'turn left': 1, 'turn right': 3, 'merge': 4, 'accelerate': 5, 'brake': 6, 'stop': 7, \n",
+        "                   'forward': 8, 'walk': 9, 'park': 10, 'drive': 11, 'reverse': 12, 'NaN': 13}\n",
         "\n",
         "temp = []\n",
         "\n",
@@ -5572,16 +5579,16 @@
       "metadata": {
         "id": "DVVdUhQJH9wW",
         "colab_type": "code",
+        "outputId": "02511a45-d994-422d-d676-218cd14043fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "15bff90d-f0d4-4397-d54b-27ff71b6b9ab"
+        }
       },
       "source": [
         "tf.stack(temp)"
       ],
-      "execution_count": 185,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5900,7 +5907,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 43
         }
       ]
     }
